# News-Sentiment

./: .gitignore  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-headlines-sentiment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-headlines-sentiment/checklists/: requirements.md
specs/001-headlines-sentiment/contracts/: newsapi-integration.md
src/headlines_sentiment/: __init__.py  __main__.py  fetcher.py  plot.py  sentiment.py
src/headlines_sentiment/data/: lexicon.json  sample_headlines.json
tests/integration/: test_end_to_end.py
tests/unit/: test_sentiment.py
